# ResearchProgrammingIntro

./: .pre-commit-config.yaml  BoxFig.ipynb  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: main.yaml
src/: BoundingBox.py  BoundingPolygon.py
tests/: test_BoundingBox.py
